# adv-crawler

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt  setup.py
cmd/: main.py
config/: default_config.yaml
crawler/core/: crawler.py  pipeline.py
crawler/utils/: logger.py  url_utils.py
