[project]
name = "adv-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "asyncio>=4.0.0",
    "colorama>=0.4.6",
    "crawlee[playwright]>=0.6.12",
    "html2text>=2025.4.15",
    "pyyaml>=6.0.2",
]
